--- a/src/plugin/template/messages/messages_en_US.properties
+++ b/src/plugin/template/messages/messages_en_US.properties
@@ -18,7 +18,7 @@ JobSQL.LineNr.Label=\u884c\u53f7\:{0}
 JobSQL.ErrorRunningSQLfromFile=\u6267\u884c SQL \u6587\u4ef6\u9519\u8bef
 JobSQL.NoDatabaseConnection=\u6ca1\u6709\u5b9a\u4e49\u6570\u636e\u5e93\u8fde\u63a5.
 JobSQL.UseVariableSubst.Tooltip=\u4f7f\u7528\u5b9e\u9645\u503c\u6765\u66ff\u6362 SQL \u811a\u672c\u91cc\u7684\u73af\u5883\u53d8\u91cf.
-JobSQL.Title=\u6267\u884c SQL \u811a\u672c aa ...
+JobSQL.Title=\u6267\u884c SQL \u811a\u672c ...
 JobSQL.Filetype.Text=\u6587\u672c\u6587\u4ef6
 JobSQL.Filetype.Sql=Sql \u6587\u4ef6
 JobSQL.SQLFromFile.Tooltip=\u4ece\u6587\u4ef6\u4e2d\u5f97\u5230\u7684 SQL
